# blog-manage-system

./: README.md
client/: .prettierrc  astro.config.mjs  cspell.config.yaml  index.html  package.json  pnpm-lock.yaml  tsconfig.json
client/components/TopBar/: index.tsx
client/pages/: index.tsx
client/src/: App.tsx  main.tsx
client/src/components/: BaseHead.astro  Header.astro
client/src/pages/: about.astro  index.astro  rss.xml.js
client/src/pages/Index/: index.tsx
client/src/pages/NotFound/: index.tsx
client/src/pages/blog/: [...slug].astro  index.astro
client/src/routes/: index.tsx
client/widgets/: index.ts  styles.module.css
client/widgets/Home/: index.tsx
client/widgets/SideBar/: index.tsx
client/widgets/Trend/: index.tsx
server/: .gitignore  Cargo.toml
server/src/: lib.rs  main.rs
server/src/entities/: feed.rs  mod.rs  role.rs  topic.rs  user.rs
server/src/entities/feed/: feed_type.rs  mod.rs  picture.rs  status_count.rs  target_feed.rs  urls_in_text.rs
server/src/entities/role/: mod.rs
server/src/entities/topic/: mod.rs
server/src/entities/user/: avatar.rs  disabled_features.rs  enabled_features.rs  mod.rs  preferences.rs  stats_count.rs
server/src/routes/: mod.rs
server/src/routes/register/: handlers.rs  mod.rs
