[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

axum = "0.5.1"
tokio = { version = "1.17.0", features = ["full"] }

tracing = "0.1.32"
tracing-subscriber = "0.3.9"

rusqlite = {version = "0.27.0",features = ["bundled"]}
